# InfoWeb2.0

./: README.md  pyproject.toml  tailwind.config.js
backend/: settings.py  urls.py
dashboard/: index.html  second.html
login/: login.html
login2/: login.html  registration.html  style.css
main/templates/main/: base.html  dashboard.html  sitemap.html
static/CACHE/css/: output.12cdec5ce0bd.css  output.41a9fc493a9f.css  output.682585daa11c.css  output.b7f5affdc2b3.css  output.f0d26b50dc66.css
static/src/css/: input.css  output.css
tailwind-demo/: package-lock.json  package.json  tailwind.config.js
tailwind-demo/src/static/SVGs/: logout-svgrepo-com.svg:Zone.Identifier  notification-bell-svgrepo-com.svg:Zone.Identifier  two-cogwheels-svgrepo-com.svg:Zone.Identifier
tailwind-demo/src/styles/: style.css
tailwind-demo/src/templates/: index.html  sidebar.html  sidebar2.html
user_auth/: forms.py  models.py  urls.py  views.py
user_auth/templates/user_auth/: alerts.html  base.html  index.html  login.html  register.html  registration.html
